--- a/css/common.css
+++ b/css/common.css
@@ -40,3 +40,15 @@ button {
 .gallery li img {
   border: 1px solid black;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
